// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Lead and two template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadContainer>
        <ExampleChild
          id="lead"
        />
      </LeadContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`2. Lead and two template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadContainer>
        <ExampleChild
          id="lead"
        />
      </LeadContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`3. Lead and two template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadContainer>
        <ExampleChild
          id="lead"
        />
      </LeadContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
        <SupportContainer>
          <ExampleChild
            id="support-2"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`4. Lead and two tracking roles 1`] = `
Array [
  "lead-and-two",
  "lead-and-two-supporting-1",
  "lead-and-two-supporting-2",
]
`;
